wiki: Fix device filter overflow on mobile

--- a/_sass/lineage/_main.scss
+++ b/_sass/lineage/_main.scss
@@ -563,6 +563,10 @@ a {
   display: flex;
   z-index: 1100;
   margin: auto;
+
+  @include media-breakpoint-up(md) {
+    min-width: 400px;
+  }
 }
 
 .popup-content {
